--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8",
-    "sweetalert2": "^11.10.5"
+    "sweetalert2": "^11.10.5",
+    "use-scan-detection": "^0.2.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
