--- a/back/package.json
+++ b/back/package.json
@@ -9,8 +9,10 @@
   "author": "a&l",
   "license": "ISC",
   "dependencies": {
+    "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0"
