--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
