--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.12.5",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.5",
-    "use-scan-detection": "^0.2.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
